increase permgen memory available when running unit tests